--- a/disneyclone/package.json
+++ b/disneyclone/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-responsive-carousel": "^3.2.23",
     "sass": "^1.69.5"
   },
   "devDependencies": {
